--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.safonov_iv.roelredit">
+>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
@@ -17,16 +17,26 @@
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity
                 android:screenOrientation="landscape"
-                android:name=".AnimationActivityMapGetFromServer"></activity>
+                android:name=".AnimationActivityMapGetFromServer">
+        </activity>
+
         <activity
                 android:screenOrientation="landscape"
-                android:name=".AnimationActivityMap"></activity>
+                android:name=".AnimationActivityMap">
+        </activity>
+
+        <activity
+                android:screenOrientation="landscape"
+                android:name=".Test.AnimationActivityMapTestDisplay">
+        </activity>
+
+
     </application>
 
 </manifest>
